--- a/ui/main/_i18n/locales/ru/units_legion.json
+++ b/ui/main/_i18n/locales/ru/units_legion.json
@@ -6,7 +6,7 @@
         "message": "Орбитальная атакующая платформа - оснащена оружием массового поражения. Хороша против хрупких целей. Малое количество здоровья."
     },
     "Lynx": {
-        "message": "Рысь"
+        "message": "Линкс"
     },
     "Mobile missile launcher - Equipped with homing missiles. Only attacks air and Orbital.": {
         "message": "Подвижная ракетная установка - оснащена самонаводящимися ракетами. Атакует только воздушные и орбитальные цели."
