--- a/ui/main/_i18n/locales/ru/units_mla.json
+++ b/ui/main/_i18n/locales/ru/units_mla.json
@@ -60,7 +60,7 @@
         "message": "Легкая атакующая машина со встроенным генератором помех. Быстрая. Имеет скорострельную пушку с фугасным снарядами."
     },
     "Swordfish": {
-        "message": "Торпеда"
+        "message": "Сворд-фиш"
     },
     "Basic strafer - Fast. Equipped with two cannons and a torpedo launcher. Attacks land, sea, and undersea targets.": {
         "message": "Оснащен двумя пушками и торпедной установкой. Атакует наземные, морские и подводные цели."
