Rename Shade Stealth Platform

--- a/ui/main/_i18n/locales/ru/units_legion.json
+++ b/ui/main/_i18n/locales/ru/units_legion.json
@@ -23,7 +23,7 @@
     "Demi Titan - Anti-titan unit. Devastating damage, very slow firerate. No Secondary Weapons. Amphibious. Attacks land and sea targets.": {
         "message": "Полу-Титан - противодействует юнитам класса Титан. Разрушительный урон с низкой скорострельностью. Не имеет вспомогательного вооружения. Амфибия. Атакует наземные и морские цели."
     },
-    "Shade Orbital Platform": {
+    "Shade Stealth Platform": {
         "message": "Скрывающая Орбитальная Платформа"
     },
     "Orbital Radar Jamming Platform - Equipped with a medium radar and radar jammer.": {
