--- a/ui/main/_i18n/locales/zh-CN/structures_legion.json
+++ b/ui/main/_i18n/locales/zh-CN/structures_legion.json
@@ -9,7 +9,7 @@
         "message": "高级质量生成器"
     },
     "Advanced Mass Generator - Produces metal, but takes much longer than mass extractors to pay for itself.": {
-        "message": "高级质量生成器 - 生产金属, 但相比质量提取器需要极长的时候回本。"
+        "message": "高级质量生成器 - 生产金属, 但相比质量提取器需要多得多的时间回本。"
     },
     "Phalanx": {
         "message": "Phalanx"
@@ -39,7 +39,7 @@
         "message": "质量生成器"
     },
     "Basic Mass Generator - Produces metal, but takes much longer than mass extractors to pay for itself.": {
-        "message": "初级质量生成器 - 生产金属, 但相比质量提取器需要极长的时候回本。"
+        "message": "初级质量生成器 - 生产金属, 但相比质量提取器需要多得多的时间回本。"
     },
     "Planet-wide Radar": {
         "message": "全球雷达"
